# rizemind

./: .buildinfo  .gitignore  .gitmodules  CNAME  README.md  Serverblockchain_logs.csv  aderyn.toml  env.yml  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  repomix.config.json  requirements.txt  search.html  searchindex.js  setup.py
.cursor/rules/: docstring-style.mdc  structural-rules.mdc
.doctrees/: environment.pickle  index.doctree  install.doctree
.doctrees/developers/: index.doctree
.doctrees/how-tos/: generate-store-mnemonic.doctree  index.doctree
.doctrees/quickstarts/: examples.doctree  index.doctree
.doctrees/references/: index.doctree
_modules/: index.html
_sources/: install.rst
developers/: index.html
examples/: README.md
examples/basic_signature/: README.md  pyproject.toml
examples/basic_signature/signedupdates/: __init__.py  client_app.py  server_app.py  signed_fedavg.py  task.py
examples/centralized_shapely_value/: pyproject.toml
examples/centralized_shapely_value/centralized_shapley_value/: server_app.py
examples/centralized_shapely_value/signedupdates/: server_app.py
examples/decentralized_shapely_value/: pyproject.toml
examples/decentralized_shapely_value/decentralized_shapley_value/: client_app.py  server_app.py
examples/dpsv_mnist_non_iid/: pyproject.toml
examples/dpsv_mnist_non_iid/dpsv_mnist/: server_app.py  task.py
examples/flower_quickstart/: README.md  pyproject.toml
examples/flower_quickstart/tfexample/: server_app.py
examples/lit_dp/: README.md  pyproject.toml  train.py
examples/lit_dp/pytorchlightning_example/: client_app.py  dp_strategy.py  server_app.py  task.py
examples/private_shapley/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
examples/private_shapley/contracts/: audit_plan.md  foundry.toml  test_results_appendix.md
examples/private_shapley/contracts/cache/: solidity-files-cache.json  test-failures
examples/private_shapley/contracts/gas-cost-analysis/: gas_analysis_report.md
examples/private_shapley/contracts/src/: DeterministicSamplingShapley.sol  ImprovedPrivateShapley.sol  MockERC20.sol  MonteCarloShapley.sol  PrivateShapley.sol
examples/private_shapley/contracts/test/: MonteCarloShapleyGas.sol  PrivateShapley.t.sol  PrivateShapleyGas.sol  UnitTests.t.sol  invariantTests.t.sol  script.sh
examples/private_shapley/private_shapley/: aggregator.py  check_ownership.py  client_app.py  commit.py  commitment.py  contract.py  fund_accounts.py  generate_mnemonic.py  merkle.py  server_app.py  task.py
examples/private_shapley/private_shapley/tests/: test_aggregator.py  test_commitment.py  test_integration.py  test_merkle.py
examples/rizenet_deployment/: README.md  pyproject.toml
examples/rizenet_deployment/rizenet_deployment/: client_app.py  server_app.py
examples/rizenet_shapley/: .gitignore  README.md  pyproject.toml
examples/rizenet_shapley/rizenet_shapley/: __init__.py  client.py  generate_mnemonic.py  server.py  task.py
examples/rizenet_testnet/: pyproject.toml
examples/rizenet_testnet/src/: client.py  server.py  task.py
examples/shapley_commitment/: foundry.toml  pyproject.toml
examples/shapley_commitment/contracts/: ShapleyCommitment.sol
examples/shapley_commitment/test/: ShapleyCommitment.t.sol
examples/tabpfn_centralized/: pyproject.toml
examples/tabpfn_centralized/tabpfn_training/: client_app.py  server_app.py  strategy.py  task.py
examples/tabpfn_centralized/tabpfn_training/finetuning/: constant_utils.py  data_classes.py  finetune_main.py
examples/tabpfn_centralized/tabpfn_training/finetuning/metric_utils/: ag_classification_metrics.py  ag_metrics.py
examples/tabpfn_centralized/tabpfn_training/finetuning/training_utils/: ag_early_stopping.py  model_utils.py  training_loss.py  validation_utils.py
examples/tabpfn_local_decentralized/: .env.example  pyproject.toml
examples/tabpfn_local_decentralized/tabpfn_local_example/: __init__.py  client.py  server.py  task.py  train_sample_prepration.py
examples/tabpfn_local_decentralized/tabpfn_local_example/__marimo__/session/: data_prepration.py.json
examples/torch_basic/: pyproject.toml
examples/torch_basic/basic_torch/: server_app.py  task.py
examples/torch_basic/torch_basic/: client_app.py  server.py
examples/torch_diff_privacy/: pyproject.toml
examples/torch_diff_privacy/src/: client_app.py  server.py  server_app.py
examples/torch_dyn_diff_privacy_shapley/: pyproject.toml
examples/torch_dyn_diff_privacy_shapley/src/: client.py  client_app.py  server.py  server_app.py  task.py
examples/torch_dyn_privacy_opacus/: pyproject.toml
examples/workflow/: .gitignore  pyproject.toml
examples/workflow/src/: client.py  server.py  task.py
forge/: .gitignore  README.md  deploy.sh  foundry.toml  remappings.txt
how-tos/: generate-store-mnemonic.html  index.html
quickstarts/: examples.html  index.html
references/: index.html
smart_contracts/: .gitignore  README.md  ape-config.yaml  flat.sol  pyproject.toml
smart_contracts/contracts/: MemberManagement.sol  helloworld.sol
smart_contracts/contracts/access_control/: FLAccessControl.sol  FLDemocraticWhitelist.sol
smart_contracts/contracts/compensation/: SimpleContributionDistributor.sol  TESTSimpleContributionDistributor.sol
smart_contracts/contracts/models/: IModelRegistry.sol  ModelRegistryV1.sol  ModelV1Factory.sol
smart_contracts/contracts/token/: SimpleContributionDistributor.sol
smart_contracts/output/79123/ModelRegistryFactory/: latest.json
smart_contracts/output/79123/ModelRegistryV1/: 1.0.0.json
smart_contracts/scripts/deploy/: MemberMgt.py  helloworld.py  model_factory.py  upgrade_implementation.py
smart_contracts/scripts/members/: add.py
smart_contracts/src/: output.py
smart_contracts/tests/: dis_test_MemberMgt.py  test_helloworld.py
smart_contracts/tests/access_control/: test_fl_access_control.py
smart_contracts/tests/compensation/: test_simple_contribution_distributor.py
smart_contracts/tests/models/: test_model_registry_v1.py
tests/: conftest.py
(+694 files in other folders)
