[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rizemind"
version = "0.0.1"
description = "RIZEMIND: building decentralized collective intelligence"
license = "Apache-2.0"
authors = ["T-RIZE Labs <michael.duchesne@t-rize.io>"]
packages = [
    { include = "rizemind", from = "src/py" },
]

[tool.poetry.dependencies]
python = "^3.12" 
web3 = ">=7.0.0"
numpy = "<2.0.0"
eth-account = ">=0.13.4"
py-solc-x = "^2.0.3"
pydantic = "^2.10.6"
mnemonic = "^0.21"
flwr = "^1.15.1"
ray = "^2.42.0"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.0"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2024.10.3"
Pygments = "^2.19.1"

[tool.poetry.group.test.dependencies]
pytest = ">=6.0"
torch = ">=1.9"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = [
    "src/py",
]
filterwarnings = "ignore::DeprecationWarning"