[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rizemind"
version = "0.0.1"
description = "RIZEMIND: building decentralized collective intelligence"
authors = [{ name = "T-RIZE Labs", email = "michael.duchesne@t-rize.io" }]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "bidict>=0.23.1",
    "eth-account>=0.13.6",
    "mnemonic>=0.21",
    "numpy>=2.0.2",
    "py-solc-x>=2.0.3",
    "pydantic>=2.11.3",
    "tomli>=2.2.1",
    "web3>=7.10.0",
    "flwr>=1.17.0"
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.4"]
docs = [
    "pygments>=2.19.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
]
ml = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "ray>=2.0.0",
    "tensorflow-cpu>=2.9.1,!=2.11.1 ; platform_machine == 'x86_64'",
    "torch>=2.6.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/py/rizemind"]

[tool.hatch.build.targets.wheel]
include = ["src/py/rizemind"]

[tool.hatch.build.targets.wheel.sources]
"src/py/rizemind" = "rizemind"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = ["src/py"]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv.sources]
rizemind = { workspace = true }

[tool.uv.workspace]
members = [
    "examples/basic_signature",
    "examples/centralized_shapely_value",
    "examples/decentralized_shapely_value",
    "examples/rizenet_deployment",
    "examples/rizenet_shapley",
]
