[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorchlightning_example"
version = "1.0.0"
description = "Federated Learning with PyTorch Lightning and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "pytorch-lightning>=2.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchlightning_example.server_app:app"
clientapp = "pytorchlightning_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
max-epochs = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
