# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-shapley"
version = "0.1.0"
description = "Private Shapley Value Calculation for Federated Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-hash>=0.5.0",
    "eth-utils>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
[tool.hatch.metadata]
allow-direct-references = true