[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rizenet_deployment"
version = "1.0.0"
description = "Federated Learning with signed updates"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "tensorflow-cpu>=2.9.1, != 2.11.1 ; platform_machine == \"x86_64\"",
    "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
    "ray>=2.0.0"
]


[tool.hatch.build.targets.wheel]
packages = ["."]
[tool.hatch.metadata]
allow-direct-references = true

[tool.flwr.app]
publisher = "trizelabs"

[tool.flwr.app.components]
serverapp = "rizenet_deployment.server_app:app"
clientapp = "rizenet_deployment.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
batch-size = 32
learning-rate = 0.005
fraction-fit = 0.5
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.web3.model_v1]
name = "test_model"
ticker = "tst"

[tool.eth.account]
mnemonic = "$RIZENET_MNEMONIC"

[tool.web3]
url = "https://testnet.rizenet.io"