[project]
name = "tabpfn-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "polars>=1.31.0",
    "pynvml>=12.0.0",
    "schedulefree>=1.4.1",
    "tabpfn>=2.0.9",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "mlflow>=3.1.1",
    "wandb>=0.21.0",
]
