[project]
name = "tabpfn-centralized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr>=1.18.0",
    "flwr-datasets>=0.5.0",
    "ipython>=9.3.0",
    "lightgbm>=4.6.0",
    "marimo>=0.14.10",
    "mlflow>=3.1.1",
    "polars>=1.31.0",
    "pynvml>=12.0.0",
    "ruff>=0.11.6",
    "schedulefree>=1.4.1",
    "tabpfn>=2.0.9",
    "wandb>=0.21.0",
]
