[project]
name = "torch-dyn-diff-privacy-shapley"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr-datasets[vision]>=0.5.0",
    "flwr[simulation]>=1.18.0",
    "opacus>=1.5.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "trize"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
# Server configs
fraction-fit = 0.3
fraction-evaluate = 1.0
min-available-clients = 2
num-server-rounds = 10
num-supernodes = 10
# Client configs
## Client Dataloader
batch-size = 32
alpha = 1.5
## Client trainer
max-grad-norm = 1.0
learning-rate = 0.001
target-delta = 1e-6
target-epsilon = 1.0
target-epsilon-lower = 0.1
target-epsilon-upper = 1.1
epsilon-multiplier = 1.01
epochs = 5
contribution-lower = 0.4
contribution-upper = 0.9

[tool.flwr.federations]
default = "local-simulation-gpu"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.25 # at most 5 ClientApp will run in a given GPU

[tool.web3.model_v1]
name = "test_model"
local_factory_deployment_path = "../../forge/output/31337/ModelRegistryFactory.json"

[tool.eth.account]
mnemonic = "test test test test test test test test test test test junk"

[tool.web3]
url = "http://127.0.0.1:8545"
